syntax = "proto3";

option java_package = "com.pranavkapoorr.helloworldgrpc";

service LoginService {
    rpc logIn (LoginRequest) returns (LoginResponse);
}
message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    int32 responseCode = 1;
    string message = 2;
}